--- a/index.html
+++ b/index.html
@@ -705,10 +705,16 @@
 
   </footer>
   <!-- End Footer -->
+  
+  <div class="chating">
+    <div class="chat-item">
+      <a href="https://wa.me/message/"><i class="bi bi-whatsapp"></i></a>
+    </div>
+  </div>
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <div id="preloader"></div>
+  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
