--- a/Arabic/contact.html
+++ b/Arabic/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Contact</title>
+  <title> تواصل معنا</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,7 +49,8 @@
           <li><a href="about.html">من نحن</a></li>
           <li><a href="services.html">خدماتنا</a></li>
           <li><a href="projects.html">الأبل</a></li>
-          <li><a href="contact.html" class="active">تواصل معنا</a></li>
+          <li><a href="contact.html" class="active">مقالات</a></li>
+          <li><a href="contact.html">تواصل معنا</a></li>
           <li class="dropdown"><a href="#"><span>اللغة</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="contact.html">العربية</a></li>
