--- a/Arabic/index.html
+++ b/Arabic/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Index</title>
+  <title>الرئيسية</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,6 +51,7 @@
           <li><a href="about.html">من نحن</a></li>
           <li><a href="services.html">خدماتنا</a></li>
           <li><a href="projects.html">الأبل</a></li>
+          <li><a href="contact.html">مقالات</a></li>
           <li><a href="contact.html">تواصل معنا</a></li>
           <li class="dropdown"><a href="#"><span>اللغة</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
