--- a/Arabic/project-details.html
+++ b/Arabic/project-details.html
@@ -49,7 +49,8 @@
           <li><a href="about.html">من نحن</a></li>
           <li><a href="services.html">خدماتنا</a></li>
           <li><a href="projects.html">الأبل</a></li>
-          <li><a href="contact.html" class="active">تواصل معنا</a></li>
+          <li><a href="contact.html">مقالات</a></li>
+          <li><a href="contact.html">تواصل معنا</a></li>
           <li class="dropdown"><a href="#"><span>اللغة</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="project-details.html">العربية</a></li>
