--- a/Arabic/projects.html
+++ b/Arabic/projects.html
@@ -48,8 +48,9 @@
           <li><a href="index.html" >الرئيسية</a></li>
           <li><a href="about.html">من نحن</a></li>
           <li><a href="services.html">خدماتنا</a></li>
-          <li><a href="projects.html">الأبل</a></li>
-          <li><a href="contact.html" class="active">تواصل معنا</a></li>
+          <li><a href="projects.html" class="active">الأبل</a></li>
+          <li><a href="contact.html">مقالات</a></li>
+          <li><a href="contact.html" >تواصل معنا</a></li>
           <li class="dropdown"><a href="#"><span>اللغة</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="projects.html">العربية</a></li>
