--- a/Arabic/services.html
+++ b/Arabic/services.html
@@ -49,6 +49,7 @@
           <li><a href="about.html">من نحن</a></li>
           <li><a href="services.html" class="active">خدماتنا</a></li>
           <li><a href="projects.html">الأبل</a></li>
+          <li><a href="contact.html">مقالات</a></li>
           <li><a href="contact.html">تواصل معنا</a></li>
           <li class="dropdown"><a href="#"><span>اللغة</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
