--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
           <li><a href="about.html" class="active">About</a></li>
           <li><a href="services.html" >Services</a></li>
           <li><a href="projects.html">Camels</a></li>
+          <li><a href="blog.html"> Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
