--- a/project-details.html
+++ b/project-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Project Details</title>
+  <title>Camel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,6 +49,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html" >Services</a></li>
           <li><a href="projects.html" class="active">Camels</a></li>
+          <li><a href="blog.html"> Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
